--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "bcryptjs": "^3.0.3",
     "cloudinary": "^2.9.0",
     "cookie": "^1.1.1",
+    "framer-motion": "^12.33.0",
     "jose": "^6.1.3",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.6",
     "next": "16.1.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
