--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^12.33.0",
     "jose": "^6.1.3",
     "jsonwebtoken": "^9.0.3",
+    "lucide-react": "^0.563.0",
     "mongoose": "^9.1.6",
     "next": "16.1.6",
     "react": "19.2.3",
